--- a/MyBank-Draft3/MyBank-Draft3.csproj
+++ b/MyBank-Draft3/MyBank-Draft3.csproj
@@ -124,6 +124,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MyBankDataClass.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Classes\TransactionListView.cs" />
     <Compile Include="Pages\Customer\Home.xaml.cs">
       <DependentUpon>Home.xaml</DependentUpon>
     </Compile>
