--- a/MyBank-Draft3/MyBank-Draft3.csproj
+++ b/MyBank-Draft3/MyBank-Draft3.csproj
@@ -104,6 +104,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\Customer\ReportsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\Customer\TransactionsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -124,9 +128,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MyBankDataClass.dbml</DependentUpon>
     </Compile>
-    <Compile Include="Classes\TransactionListView.cs" />
     <Compile Include="Pages\Customer\Home.xaml.cs">
       <DependentUpon>Home.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Customer\ReportsPage.xaml.cs">
+      <DependentUpon>ReportsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\Customer\TransactionsPage.xaml.cs">
       <DependentUpon>TransactionsPage.xaml</DependentUpon>
